fix: scroll, green boxes placement, pink box sizing, yellow box overflow

--- a/CSS_advanced/flex/flex.css
+++ b/CSS_advanced/flex/flex.css
@@ -7,12 +7,11 @@ a:hover {
   background: var(--deep-blue);
 }
 
-@media only screen and (width > 1280px) and (orientation: landscape) and (hover: hover) {
+@media only screen and (width >= 1280px) and (hover: hover) {
   body {
     display: flex;
     flex-direction: row;
     gap: 20px;
-    margin: 15px;
     align-items: start;
   }
 
@@ -46,6 +45,12 @@ a:hover {
     bottom: 0;
   }
 
+  nav > p {
+    font-size: 26px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   main {
     border: 5px solid pink;
   }
@@ -70,6 +75,14 @@ a:hover {
     display: flex;
     flex-direction: column-reverse;
     gap: 20px;
+    margin: 15px;
+  }
+
+  .cats-img {
+    max-height: 250px;
+    max-width: 250px;
+    height: auto;
+    width: auto;
   }
 
   .container-body {
@@ -80,7 +93,7 @@ a:hover {
 
   nav {
     border: 5px solid yellow;
-    width: 100vw;
+    width: 100%;
     height: 200px;
     position: sticky;
     top: 0;
@@ -105,6 +118,7 @@ a:hover {
   .side-content {
     border: 5px solid green;
     width: 100px;
+    overflow: hidden;
   }
 
   main {
